# punk

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DCO.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  pr-intake-gate.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  general.md  question.yml
.github/workflows/: codex-review-gate.yml  codex-review-ready.yml  docs-governance.yml  pr-intake-gate.yml
brand/landing/: PUNK-LANDING-DESIGN.md
crates/punk-cli/: Cargo.toml
crates/punk-cli/src/: main.rs
crates/punk-contract/: Cargo.toml
crates/punk-core/: Cargo.toml
crates/punk-domain/: Cargo.toml
crates/punk-eval/: Cargo.toml
crates/punk-eval/src/: lib.rs
crates/punk-events/: Cargo.toml
crates/punk-flow/: Cargo.toml
crates/punk-gate/: Cargo.toml
crates/punk-mod-pub/: Cargo.toml
crates/punk-mod-pubpunk/: Cargo.toml
crates/punk-module-host/: Cargo.toml
crates/punk-project/: Cargo.toml
crates/punk-proof/: Cargo.toml
crates/punk-rules/: Cargo.toml
docs/_schema/: doc-artifact.v0.1.schema.yaml  doc-impact.v0.1.schema.yaml
docs/adapters/: repo-search.md
docs/adr/: ADR-0001-core-first-workspace.md  ADR-0002-flow-and-eval-before-features.md  ADR-0003-project-memory-plane.md  ADR-0004-dogfooding-from-day-zero.md  ADR-0005-stabilization-gates.md  ADR-0006-research-gate-before-major-decisions.md  ADR-0007-public-narrative-plane.md  ADR-0008-eval-plane.md  ADR-0008-knowledge-vault-boundaries.md  (+9 more)
evals/: README.md
flows/: README.md  core-workflow.v1.yaml
knowledge/: README.md
public/: README.md
publishing/: README.md
scripts/: check.sh  check_docs_governance.py  check_module_control_markers.py  check_research_gate.py  check_work_ledger.py  pr_intake_gate.py  test_pr_intake_gate.py
site/: package-lock.json  package.json
work/: README.md  STATUS.md
(+987 files in other folders)
