[package]
name = "punk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
punk-eval = { path = "../punk-eval" }
punk-events = { path = "../punk-events" }
punk-flow = { path = "../punk-flow" }

[[bin]]
name = "punk"
path = "src/main.rs"
