[package]
name = "punk-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
punk-contract = { path = "../punk-contract" }
punk-domain = { path = "../punk-domain" }
punk-events = { path = "../punk-events" }
punk-flow = { path = "../punk-flow" }
punk-gate = { path = "../punk-gate" }
punk-proof = { path = "../punk-proof" }
