[package]
name = "punk-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
punk-contract = { path = "../punk-contract" }
punk-core = { path = "../punk-core" }
punk-domain = { path = "../punk-domain" }
punk-events = { path = "../punk-events" }
punk-flow = { path = "../punk-flow" }
punk-gate = { path = "../punk-gate" }
punk-module-host = { path = "../punk-module-host" }
punk-mod-pub = { path = "../punk-mod-pub" }
punk-project = { path = "../punk-project" }
punk-proof = { path = "../punk-proof" }
